--- a/mongo2web/src/main/resources/templates/index.html
+++ b/mongo2web/src/main/resources/templates/index.html
@@ -5,6 +5,9 @@
 	<title>Title</title>
 </head>
 <body>
-<a href="/alldata">전체자료 읽기</a>
+<a href="/alldata">전체자료 읽기</a><br/>
+<a href="/insertform">자료 추가</a><br/>
+<a href="/updateform">자료 수정</a><br/>
+<a href="/deleteform">자료 삭제</a><br/>
 </body>
 </html>
